# ITMO

First course/ALGORITHMS/Dynamic programming/: Aquarium.java  Brackets.java  CutePatterns.java
First course/ALGORITHMS/Greedy Bruteforce Hash/: A.java  B.java  C.java  D.java  E.java  F.java  G.java  H.java  I.java  J.java  K.java  L.java  M.java  N.java  O.java  Speed.cpp
First course/ALGORITHMS/Queries on Tree Paths/: A.cpp  B.java  C 21.11.06.java
First course/ALGORITHMS/Search Trees/: A.java  C.java  D.java  E.java  F.java  G.java  H.java
First course/ALGORITHMS/Segment tree/: A.java  B.java  C.java  D.java  E.java  F.java  G.java  H.java  I.java  J.java  K.java  L.java
First course/C++ course by Skakov/ClassWork/: Lesson1.cpp  Lesson2.c  Lesson3.c  Lesson4.c  Lesson5.c  Task.cpp
First course/C++ course by Skakov/Problems/: Lab1.c  Lab2.c  Lab3.c  Lab4.cpp
First course/DM/Automation/: A.java  B.java  C.cpp  D.java  E.java  F.java  G.java  H.java
First course/DM/Combinatorics/: Brackets.java  Brackets2Num.java  Choose.java  Choose2Num.java  NextBrackets.java  NextChoose.java  NextMultiPerm.java  NextPartition.java  NextPerm.java  NextSetPartition.java  NextVector.java  Num2Brackets.java  Num2Choose.java  Num2Part.java  Num2Perm.java  Part2Num.java  Part2Sets.java  (+3 more)
Second course/Advanced Java/: NOTES.md  compilation-log.txt  notes.txt
Third course/Functional programming/fp-homework/hw3/: README.md  hw3.cabal
Third course/Functional programming/fp-homework/hw3/src/HW3/: Lexer.hs
Third course/Mathematical statistics/: M3335 Герасимов Михаил.xlsx
(+674 files in other folders)
