name:                hw3
version:             0.1.0.0
synopsis:            Synopsis for task 3
description:         Task 3 for FP ITMO course

homepage:            https://github.com/Mizzza54/fp-homework/tree/master/hw3#readme
license:             MIT
license-file:        LICENSE
author:              Michael Gerasimov
maintainer:          gerasimov.misha2001@gmail.com
copyright:           2021 Michael Gerasimov

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     HW3.Base,
                       HW3.Parser,
                       HW3.Pretty,
                       HW3.Evaluator
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010
